--- a/src/ZeroGC.BumpPointer/ZeroGC.BumpPointer.vcxproj
+++ b/src/ZeroGC.BumpPointer/ZeroGC.BumpPointer.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{178C48F7-50A9-40B0-B2CD-394175F74722}</ProjectGuid>
+    <ProjectGuid>{3B59C454-21D0-44F7-8070-230E31570B66}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CustomGC</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
@@ -72,18 +72,26 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
     <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
+    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
+    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
     <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
