Changes due to GC API 2.1

--- a/src/ZeroGC.BumpPointer/ZeroGC.BumpPointer.vcxproj
+++ b/src/ZeroGC.BumpPointer/ZeroGC.BumpPointer.vcxproj
@@ -5,13 +5,13 @@
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="Release|Win32">
-      <Configuration>Release</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release|Win32">
+      <Configuration>Release</Configuration>
+      <Platform>Win32</Platform>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|x64">
       <Configuration>Release</Configuration>
@@ -23,23 +23,16 @@
     <ProjectGuid>{3B59C454-21D0-44F7-8070-230E31570B66}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CustomGC</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
@@ -52,21 +45,28 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v141</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <CharacterSet>Unicode</CharacterSet>
+  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -74,25 +74,25 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\coreclr\src\inc;f:\GithubProjects\coreclr\src\gc;f:\GithubProjects\coreclr\src\gc\env;f:\GithubProjects\coreclr\src\vm;f:\GithubProjects\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)..\build\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)..\obj\ZeroGC.BumpPointer\$(Platform)_$(Configuration)\</IntDir>
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -114,7 +114,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;CustomGC_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_AMD64_;_DEBUG;CustomGC_EXPORTS;_WINDOWS;_USRDLL;_TARGET_AMD64_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -122,7 +122,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
@@ -130,7 +130,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;CustomGC_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;CustomGC_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -140,7 +140,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
