--- a/src/ZeroGC.Calloc/ZeroGC.Calloc.vcxproj
+++ b/src/ZeroGC.Calloc/ZeroGC.Calloc.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{178C48F7-50A9-40B0-B2CD-394175F74722}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CustomGC</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'" Label="Configuration">
@@ -74,24 +74,25 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.Calloc\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.Calloc\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+    <IncludePath>$(CORECLR_FOR_CUSTOMGC)\src\inc;$(CORECLR_FOR_CUSTOMGC)\src\gc;$(CORECLR_FOR_CUSTOMGC)\src\gc\env;$(CORECLR_FOR_CUSTOMGC)\src\vm;$(CORECLR_FOR_CUSTOMGC)\src\pal\prebuilt\inc;$(CORECLR_FOR_CUSTOMGC)\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.Calloc\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.Calloc\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>  </PropertyGroup>
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.Calloc\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.Calloc\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>	
+    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\ZeroGC.Calloc\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\obj\ZeroGC.Calloc\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>f:\GithubProjects\DotNet\coreclr\src\inc;f:\GithubProjects\DotNet\coreclr\src\gc;f:\GithubProjects\DotNet\coreclr\src\gc\env;f:\GithubProjects\DotNet\coreclr\src\vm;f:\GithubProjects\DotNet\coreclr\src\pal\prebuilt\inc;f:\GithubProjects\DotNet\coreclr\src\strongname\inc;$(IncludePath)</IncludePath>
+    <IncludePath>$(CORECLR_FOR_CUSTOMGC)\src\inc;$(CORECLR_FOR_CUSTOMGC)\src\gc;$(CORECLR_FOR_CUSTOMGC)\src\gc\env;$(CORECLR_FOR_CUSTOMGC)\src\vm;$(CORECLR_FOR_CUSTOMGC)\src\pal\prebuilt\inc;$(CORECLR_FOR_CUSTOMGC)\src\strongname\inc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
