Strange version mismatch (temporary) fix

--- a/src/Samples.ConsoleApp/Properties/launchSettings.json
+++ b/src/Samples.ConsoleApp/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "ConsoleApp": {
       "commandName": "Project",
       "environmentVariables": {
-        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.Calloc\\x64_Release\\ZeroGC.Calloc.dll",
-        "COMPlus_HeapVerify": "16"
+        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.Calloc\\x64_Debug\\ZeroGC.Calloc.dll"
       }
     }
   }
