Initial bump-pointer implementation

--- a/src/Samples.ConsoleApp/Properties/launchSettings.json
+++ b/src/Samples.ConsoleApp/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "ConsoleApp": {
       "commandName": "Project",
       "environmentVariables": {
-        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.Calloc\\x64_Debug\\ZeroGC.Calloc.dll"
+        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.Calloc\\x64_Debug\\ZeroGC.Calloc.dll",
+        "COMPlus_HeapVerify": "16"
       }
     }
   }
