--- a/src/Samples.WebApi/WebApi.csproj
+++ b/src/Samples.WebApi/WebApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeFrameworkVersion>2.1.5</RuntimeFrameworkVersion>
     <ServerGarbageCollection>false</ServerGarbageCollection>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
