Small project configuration changes - default paths

--- a/src/Samples.ConsoleApp/Properties/launchSettings.json
+++ b/src/Samples.ConsoleApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "ConsoleApp": {
       "commandName": "Project",
       "environmentVariables": {
-        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.Calloc\\x64_Debug\\ZeroGC.Calloc.dll",
+        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.BumpPointer\\x64_Debug\\ZeroGC.BumpPointer.dll",
         "COMPlus_HeapVerify": "16"
       }
     }
