--- a/src/Samples.ConsoleApp/ConsoleApp.csproj
+++ b/src/Samples.ConsoleApp/ConsoleApp.csproj
@@ -16,6 +16,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath />
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
