--- a/src/Samples.ConsoleApp/Properties/launchSettings.json
+++ b/src/Samples.ConsoleApp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "nativeDebugging": true,
       "environmentVariables": {
-        "COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.BumpPointer\\x64_Debug\\ZeroGC.BumpPointer.dll",
+        "_COMPlus_GCName": "f:\\GithubProjects\\CoreCLR.ZeroGC\\build\\ZeroGC.BumpPointer\\x64_Debug\\ZeroGC.BumpPointer.dll",
         "COMPlus_HeapVerify": "16"
       }
     }
