Mark traversal - work in progress

--- a/src/UpsilonGC/UpsilonGC.vcxproj
+++ b/src/UpsilonGC/UpsilonGC.vcxproj
@@ -102,6 +102,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_AMD64_;_DEBUG;UpsilonGC_EXPORTS;_WINDOWS;_USRDLL;_TARGET_AMD64_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <StructMemberAlignment>8Bytes</StructMemberAlignment>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
